real-project/Qgis/test-lambda/classification_results/non_compilable/test_50.cpp.log
/home/anonymous/compare-order/real-project/QGIS/test-lambda/test_50.cpp:27:17: error: invalid operands to binary expression ('const QString' and 'const QString')
   27 |     if ( a.name == b.name )
      |          ~~~~~~ ^  ~~~~~~
1 error generated.
